《Linux集群之美》第6章/6.2.4/test-nginx-traefik.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-pod
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
      - name: nginx
        image: 192.168.1.255:8083/nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    traefik.ingress.kubernetes.io/load-balancer-method: drr
spec:
  template:
    metadata:
      labels:
        name: nginx-service
        namespace: default
spec:
  selector:
    app: nginx-pod
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: k8s.nginx.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 8080
